generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum UserRole {
  CUSTOMER
  ADMIN
}

enum UserStatus {
  ACTIVE
  LOCKED
}

enum GameStatus {
  DRAFT
  PUBLISHED
  HIDDEN
  ARCHIVED
}

enum CartStatus {
  ACTIVE
  CHECKED_OUT
  ABANDONED
}

enum OrderStatus {
  PENDING_PAYMENT
  PAID
  PAYMENT_FAILED
  CANCELLED
}

enum PaymentStatus {
  PENDING
  SUCCEEDED
  FAILED
}

enum ReviewVisibility {
  VISIBLE
  HIDDEN
}

enum PromotionStatus {
  DRAFT
  ACTIVE
  STOPPED
}

enum MediaType {
  IMAGE
  VIDEO
}

enum OwnershipStatus {
  ACTIVE
}

model User {
  id                   String               @id @default(uuid()) @db.Uuid
  username             String               @unique @db.VarChar(32)
  email                String               @unique @db.VarChar(320)
  passwordHash         String               @db.VarChar(255)
  displayName          String               @db.VarChar(120)
  avatarPath           String?
  birthDate            DateTime?            @db.Date
  countryCode          String?              @db.Char(2)
  role                 UserRole             @default(CUSTOMER)
  status               UserStatus           @default(ACTIVE)
  createdAt            DateTime             @default(now())
  updatedAt            DateTime             @updatedAt
  lastLoginAt          DateTime?
  sessions             Session[]
  resetTokens          PasswordResetToken[]
  carts                Cart[]
  wishlist             Wishlist?
  orders               Order[]
  libraryItems         LibraryItem[]
  reviews              Review[]
  createdPromotions    Promotion[]          @relation("PromotionCreator")
  auditLogs            AuditLog[]

  @@index([role, status])
  @@index([createdAt])
}

model Session {
  id        String   @id @default(uuid()) @db.Uuid
  userId    String   @db.Uuid
  tokenHash String   @unique @db.VarChar(255)
  expiresAt DateTime
  revokedAt DateTime?
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, expiresAt])
}

model PasswordResetToken {
  id         String    @id @default(uuid()) @db.Uuid
  userId     String    @db.Uuid
  tokenHash  String    @unique @db.VarChar(255)
  expiresAt  DateTime
  usedAt     DateTime?
  createdAt  DateTime  @default(now())
  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, expiresAt])
}

model Developer {
  id          String   @id @default(uuid()) @db.Uuid
  name        String   @unique @db.VarChar(160)
  description String?
  website     String?
  logoPath    String?
  countryCode String?  @db.Char(2)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  games       Game[]

  @@index([name])
}

model Publisher {
  id          String   @id @default(uuid()) @db.Uuid
  name        String   @unique @db.VarChar(160)
  description String?
  website     String?
  logoPath    String?
  countryCode String?  @db.Char(2)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  games       Game[]

  @@index([name])
}

model Category {
  id          String         @id @default(uuid()) @db.Uuid
  name        String         @unique @db.VarChar(100)
  slug        String         @unique @db.VarChar(120)
  description String?
  isActive    Boolean        @default(true)
  createdAt   DateTime       @default(now())
  updatedAt   DateTime       @updatedAt
  gameLinks   GameCategory[]
}

model Game {
  id                       String          @id @default(uuid()) @db.Uuid
  name                     String          @db.VarChar(180)
  slug                     String          @unique @db.VarChar(200)
  shortDescription         String          @db.VarChar(320)
  description              String
  basePrice                Decimal         @db.Decimal(12, 2)
  releaseDate              DateTime
  coverPath                String?
  heroPath                 String?
  ageRating                String?         @db.VarChar(20)
  status                   GameStatus      @default(DRAFT)
  platforms                String[]
  minimumRequirements      Json?
  recommendedRequirements  Json?
  developerId              String          @db.Uuid
  publisherId              String          @db.Uuid
  createdAt                DateTime        @default(now())
  updatedAt                DateTime        @updatedAt
  developer                Developer       @relation(fields: [developerId], references: [id], onDelete: Restrict)
  publisher                Publisher       @relation(fields: [publisherId], references: [id], onDelete: Restrict)
  categoryLinks            GameCategory[]
  media                    GameMedia[]
  cartItems                CartItem[]
  wishlistItems            WishlistItem[]
  orderItems               OrderItem[]
  libraryItems             LibraryItem[]
  reviews                  Review[]
  promotionLinks           GamePromotion[]

  @@index([status, releaseDate])
  @@index([status, name])
  @@index([developerId])
  @@index([publisherId])
}

model GameCategory {
  gameId     String   @db.Uuid
  categoryId String   @db.Uuid
  game       Game     @relation(fields: [gameId], references: [id], onDelete: Cascade)
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  @@id([gameId, categoryId])
  @@index([categoryId])
}

model GameMedia {
  id          String    @id @default(uuid()) @db.Uuid
  gameId      String    @db.Uuid
  type        MediaType
  path        String    @db.VarChar(500)
  previewPath  String?   @db.VarChar(500)
  title       String?   @db.VarChar(180)
  sortOrder   Int       @default(0)
  metadata    Json?
  createdAt   DateTime  @default(now())
  game        Game      @relation(fields: [gameId], references: [id], onDelete: Cascade)

  @@index([gameId, sortOrder])
}

model Cart {
  id        String     @id @default(uuid()) @db.Uuid
  userId    String     @db.Uuid
  status    CartStatus @default(ACTIVE)
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     CartItem[]

  @@unique([userId, status])
  @@index([userId, status])
}

model CartItem {
  id            String   @id @default(uuid()) @db.Uuid
  cartId        String   @db.Uuid
  gameId        String   @db.Uuid
  priceWhenAdded Decimal @db.Decimal(12, 2)
  addedAt       DateTime @default(now())
  cart          Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
  game          Game     @relation(fields: [gameId], references: [id], onDelete: Restrict)

  @@unique([cartId, gameId])
  @@index([gameId])
}

model Wishlist {
  id        String         @id @default(uuid()) @db.Uuid
  userId    String         @unique @db.Uuid
  createdAt DateTime       @default(now())
  updatedAt DateTime       @updatedAt
  user      User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  items     WishlistItem[]
}

model WishlistItem {
  id         String   @id @default(uuid()) @db.Uuid
  wishlistId String   @db.Uuid
  gameId     String   @db.Uuid
  addedAt    DateTime @default(now())
  wishlist   Wishlist @relation(fields: [wishlistId], references: [id], onDelete: Cascade)
  game       Game     @relation(fields: [gameId], references: [id], onDelete: Restrict)

  @@unique([wishlistId, gameId])
  @@index([gameId])
}

model Order {
  id            String      @id @default(uuid()) @db.Uuid
  userId        String      @db.Uuid
  idempotencyKey String      @unique @db.VarChar(180)
  subtotal      Decimal     @db.Decimal(12, 2)
  discountTotal Decimal     @db.Decimal(12, 2)
  grandTotal    Decimal     @db.Decimal(12, 2)
  currency      String      @db.Char(3)
  status        OrderStatus @default(PENDING_PAYMENT)
  createdAt     DateTime    @default(now())
  paidAt        DateTime?
  user          User        @relation(fields: [userId], references: [id], onDelete: Restrict)
  items         OrderItem[]
  payment       Payment?

  @@index([userId, createdAt])
  @@index([status, createdAt])
}

model OrderItem {
  id                  String      @id @default(uuid()) @db.Uuid
  orderId             String      @db.Uuid
  gameId              String      @db.Uuid
  gameNameSnapshot    String      @db.VarChar(180)
  basePriceSnapshot   Decimal     @db.Decimal(12, 2)
  discountSnapshot    Decimal     @db.Decimal(12, 2)
  paidPrice           Decimal     @db.Decimal(12, 2)
  order               Order       @relation(fields: [orderId], references: [id], onDelete: Cascade)
  game                Game        @relation(fields: [gameId], references: [id], onDelete: Restrict)
  libraryItem         LibraryItem?

  @@index([gameId])
}

model Payment {
  id                     String        @id @default(uuid()) @db.Uuid
  orderId                String        @unique @db.Uuid
  method                 String        @db.VarChar(50)
  provider               String        @db.VarChar(80)
  providerTransactionId  String?       @unique @db.VarChar(180)
  amount                 Decimal       @db.Decimal(12, 2)
  status                 PaymentStatus @default(PENDING)
  processedAt            DateTime?
  failureReason          String?
  idempotencyKey         String        @unique @db.VarChar(180)
  createdAt              DateTime      @default(now())
  order                  Order         @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([status, createdAt])
}

model LibraryItem {
  id              String         @id @default(uuid()) @db.Uuid
  userId          String         @db.Uuid
  gameId          String         @db.Uuid
  orderItemId     String         @unique @db.Uuid
  purchasedAt     DateTime       @default(now())
  ownershipStatus OwnershipStatus @default(ACTIVE)
  user            User           @relation(fields: [userId], references: [id], onDelete: Restrict)
  game            Game           @relation(fields: [gameId], references: [id], onDelete: Restrict)
  orderItem       OrderItem      @relation(fields: [orderItemId], references: [id], onDelete: Restrict)

  @@unique([userId, gameId])
  @@index([userId, purchasedAt])
}

model Review {
  id               String          @id @default(uuid()) @db.Uuid
  userId           String          @db.Uuid
  gameId           String          @db.Uuid
  content          String
  isRecommended    Boolean
  visibilityStatus ReviewVisibility @default(VISIBLE)
  createdAt        DateTime        @default(now())
  updatedAt        DateTime        @updatedAt
  user             User            @relation(fields: [userId], references: [id], onDelete: Restrict)
  game             Game            @relation(fields: [gameId], references: [id], onDelete: Restrict)

  @@unique([userId, gameId])
  @@index([gameId, visibilityStatus, createdAt])
}

model Promotion {
  id              String          @id @default(uuid()) @db.Uuid
  name            String          @db.VarChar(160)
  description     String?
  discountPercent Decimal         @db.Decimal(5, 2)
  startsAt        DateTime
  endsAt          DateTime
  status          PromotionStatus @default(DRAFT)
  createdById     String          @db.Uuid
  createdAt       DateTime        @default(now())
  updatedAt       DateTime        @updatedAt
  createdBy       User            @relation("PromotionCreator", fields: [createdById], references: [id], onDelete: Restrict)
  gameLinks       GamePromotion[]

  @@index([status, startsAt, endsAt])
}

model GamePromotion {
  gameId      String    @db.Uuid
  promotionId String    @db.Uuid
  createdAt   DateTime  @default(now())
  game        Game      @relation(fields: [gameId], references: [id], onDelete: Cascade)
  promotion   Promotion @relation(fields: [promotionId], references: [id], onDelete: Cascade)

  @@id([gameId, promotionId])
  @@index([promotionId])
}

model AuditLog {
  id        String   @id @default(uuid()) @db.Uuid
  actorId   String   @db.Uuid
  action    String   @db.VarChar(120)
  targetType String  @db.VarChar(80)
  targetId  String   @db.VarChar(80)
  outcome   String   @db.VarChar(40)
  metadata  Json?
  createdAt DateTime @default(now())
  actor     User     @relation(fields: [actorId], references: [id], onDelete: Restrict)

  @@index([actorId, createdAt])
  @@index([targetType, targetId, createdAt])
}
